# esp32-bluetooth-motor

./: .gitignore  .gitmodules  README.md
main/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  motor.cpp  motor.h  sketch.cpp  sketch.h
